# RayTracer

./: .gitignore  BRDF.hpp  CMakeLists.txt  Camera.cpp  Color.hpp  Film.cpp  Image.hpp  Intersection.hpp  Point2D.hpp  Point3D.cpp  Point3D.hpp  Primitive.hpp  README.md  Ray.hpp  RayTracer.cpp  RayTracer.hpp  Sampler.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Vector.hpp  main.cpp
Core-Dependencies/: Camera.hpp  Color.hpp  Film.hpp  Intersection.hpp  LocalGeo.hpp  Normal.cpp  Normal.hpp  PPMImage.cpp  PPMImage.hpp  Point2D.cpp  Point3D.cpp  Point3D.hpp  Ray.cpp  RayTracer.cpp  RayTracer.hpp  Sample.hpp  Scene.cpp  Scene.hpp  Vector.cpp
Lights/: Light.hpp  PointLight.cpp  PointLight.hpp
Materials/: BRDF.cpp  BRDF.hpp  BlinnPhong.cpp  BlinnPhong.hpp  BlinnPhongWithAmbient.cpp  BlinnPhongWithAmbient.hpp  Lambertian.cpp  Lambertian.hpp  Material.hpp
Primitives/: Primitive.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
